--- a/docs/team/eshwarkp.adoc
+++ b/docs/team/eshwarkp.adoc
@@ -57,17 +57,11 @@ that I have contributed to the team project.
 
 * *Major feature*: Implemented the entire *Statistics* segment of the project which includes major GUI modifications and 3 statistics related user commands.
 
-** What does it do: The *Statistics* section was implemented to allow users to have an overview of their app data, specifically on the employee and events. Thus, the `statistics`, `generate_stats` and `generate_stats_detail` commands were implemented. The enhancement was also done to improve the user experience, by providing a clean graphical representation of the user's data through the use of the `generate_stats` command, which gives a statistical representation throught the use of lists and pie charts.
+** What does it do: The *Statistics* section was implemented to allow users to have an overview of their app data, specifically on the employee and events. Thus, the `statistics`, `generate_stats` and `generate_stats_detail` commands were implemented. The `statistics` command or clicking the Statistics tab enables the user to enter the statistics mode to be able to use the other two statistics command. The `generate_stats` command or clicking the Generate Statistics button signals the app to generate a statistical representation based on the current data. The `generate_stats_detail` command or clicking the Generate Detailed Statistics button signals the app to generate a text-based detailed statistics based on the current data. 
 
-** Justification: The *Statistics* feature improves the product significantly because it allows users to have a convenient way to view their
-upcoming event schedule and keep track of all the important event dates. The feature will greatly improve the user experience of the application
-by providing a clean user interface to allow the users to have a visual overview of their schedules.
+** Justification: The *Statistics* feature improves the product significantly because it allows users to have a convenient way to view their events and employees data, specifically their tags. For an events administrator, it is important that they find the appropriate manpower to allocate to each event and the pie chart representation of the tags allows the user to determine quicly if they have the appropriate manpower available for the upcoming event or will they require more manpower.
 
-** Highlights: This enhancement requires handling and dealing with the `Event` objects extensively. The implementation of the *Statistics* feature
-required an in-depth analysis of the application's storage and modeling architecture. The *Statistics* feature was also challenging as
-it required the implementation of an additional `DistinctDate` object for the `generate_schedule` command which was also used in the
-`Employee` window. During the designing of the *Statistics* component, deep consideration was needed to ensure that the user interface was clean
-and optimal for the users.
+** Highlights: This enhancement required handling and dealing with both the `Employee` and `Event` objects. The implementation of the *Statistics* feature required an in-depth analysis of how the program deals with storage and retrieval of these objects while the app is running. The *Statistics* feature was also challenging as it was important to make the statistics displayed useful and relevant to the user. During the designing of the *Statistics* component, deep consideration was needed to ensure that the user interface was clean and optimal for the users, therefore, it was decided that pie charts would be a suitable visual representation for the employee and event tags data.
 
 * *Minor features*: Multiple Graphic User Interface improvements were made throughout the application to improve the user experience.
 Implemented the tab recognition feature, which is used to restrict commands on specific tabs to prevent unusual behavior, which can cause users to be confused.
